--- a/index.html
+++ b/index.html
@@ -25,10 +25,17 @@
     <hr />
     <footer>
       <h2>Contact</h2>
+      <p>Delta Towers, Westlands, Waiyaki Way,Nairobi</p>
       <p>
         <a href="mailto:Maina'skitchen@email.com">Maina'skitchen@email.com</a>
       </p>
-      <p><a href="0700000000">0700 000 000</a></p>
+      <p>Tel: 0700 000 000</p>
+      <p>Monday-Friday: 10am-10pm</p>
+      <p>Saturday: 10am-11:30pm</p>
+      <p>Sunday: 11am-9pm</p>
+      <p><a href="facebook.com">FB</a></p>
+      <p><a href="x.com">X</a></p>
+      <p><a href="instagram.com">IG</a></p>
     </footer>
   </body>
 </html>
