--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       scratch with love.
     </div>
     <hr />
+    <img src="Mushroom-curry.webp" alt="Mushroom-curry" />
+    <br>
+    <img src="steak.webp" alt="Steak" width="490" height="490" />
+    <img src="shrimp-and-grits.avif" alt="shrimp-and-grits" width="475" height="380"/>
+    <hr>
     <footer>
       <h2>Contact</h2>
       <p>Delta Towers, Westlands, Waiyaki Way,Nairobi</p>
