--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>Maina's Kitchen</title>
   </head>
   <body>
-    <h1>About Us</h1>
+    <h1><u>About Us</u></h1>
     <hr />
     <a href="index.html">Home Page</a>
     <br />
@@ -16,6 +16,7 @@
     <a href="contact.html">Contacts Page</a>
     <hr />
     <footer>
+        <h2><u>Contact</u></h2>
       <p>Delta Towers, Westlands, Waiyaki Way,Nairobi</p>
       <p>
         <a href="mailto:Maina'skitchen@email.com">Maina'skitchen@email.com</a>
