--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Maina's Kitchen</title>
   </head>
   <body>
-    <h1>Contact</h1>
+    <h1><u>Contact</u></h1>
     <hr />
     <a href="index.html">Home Page</a>
     <br />
@@ -17,6 +17,7 @@
     <hr />
 
     <footer>
+      <h2><u>Contact</u></h2>
       <p>Delta Towers, Westlands, Waiyaki Way,Nairobi</p>
       <p>
         <a href="mailto:Maina'skitchen@email.com">Maina'skitchen@email.com</a>
