--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Maina's Kitchen</title>
   </head>
   <body>
-    <h1>Maina's Kitchen</h1>
+    <h1><u>Maina's Kitchen</u></h1>
     <hr />
     <a href="menu_page.html">Menu</a>
     <br />
@@ -20,16 +20,22 @@
       Welcome to Maina's Kitchen. Food isn't a meal, it's an experience. We
       cater to different palates ranging from sea food to vegeterian food. We
       work hard to source premium ingredients and we cook everything from
-      scratch with love.
+      scratch with love. We are here to make your food as memorable as the first
+      time you tasted our dishes.
     </div>
     <hr />
     <img src="Mushroom-curry.webp" alt="Mushroom-curry" />
-    <br>
+    <br />
     <img src="steak.webp" alt="Steak" width="490" height="490" />
-    <img src="shrimp-and-grits.avif" alt="shrimp-and-grits" width="475" height="380"/>
-    <hr>
+    <img
+      src="shrimp-and-grits.avif"
+      alt="shrimp-and-grits"
+      width="475"
+      height="380"
+    />
+    <hr />
     <footer>
-      <h2>Contact</h2>
+      <h2><u>Contact</u></h2>
       <p>Delta Towers, Westlands, Waiyaki Way,Nairobi</p>
       <p>
         <a href="mailto:Maina'skitchen@email.com">Maina'skitchen@email.com</a>
