--- a/menu_page.html
+++ b/menu_page.html
@@ -6,7 +6,7 @@
     <title>Maina's Kitchen</title>
   </head>
   <body>
-    <h1>Menu</h1>
+    <h1><u>Menu</u></h1>
     <hr />
     <a href="index.html">Home Page</a><br />
     <a href="about.html">About</a>
@@ -14,7 +14,7 @@
     <a href="contact.html">Contacts Page</a>
     <hr />
     <footer>
-      <h2>Contact</h2>
+      <h2><u>Contact</u></h2>
       <p>Delta Towers, Westlands, Waiyaki Way,Nairobi</p>
       <p>
         <a href="mailto:Maina'skitchen@email.com">Maina'skitchen@email.com</a>
