About page completed.

--- a/about.html
+++ b/about.html
@@ -15,8 +15,41 @@
 
     <a href="contact.html">Contacts Page</a>
     <hr />
+    <h2><u>Our History</u></h2>
+    <p>Our restaurant was established in 2015.</p>
+    <p>
+      Our restaurant was founded to help people go beyond eating simply eating
+      food.
+    </p>
+    <p>
+      We wanted to make people curious about different cusuines from different
+      parts of the world.
+    </p>
+    <h2><u>Our Mission</u></h2>
+
+    <p>
+      We want to make people curious about different cusuines from different
+      parts of the world.
+    </p>
+    <p>We want people to experience and enjoy a meal.</p>
+
+    <h2><u>Team</u></h2>
+    <p>
+      We have a team of 7 chefs trained in various cuisines from across the
+      world.
+    </p>
+    <p>
+      Our head chef has experience from working in Michelin star restaurants. He
+      has carefully crafted a menu from scratch to help people try food from all
+      parts of the world.
+    </p>
+    <p>
+      Our support staff has been trained to make your dining experience as
+      wonderful and seemless as possible.
+    </p>
+    <hr />
     <footer>
-        <h2><u>Contact</u></h2>
+      <h2><u>Contact</u></h2>
       <p>Delta Towers, Westlands, Waiyaki Way,Nairobi</p>
       <p>
         <a href="mailto:Maina'skitchen@email.com">Maina'skitchen@email.com</a>
