--- a/menu_page.html
+++ b/menu_page.html
@@ -13,6 +13,26 @@
     <br />
     <a href="contact.html">Contacts Page</a>
     <hr />
+    <h2><u>Starters</u></h2>
+    <div>
+      <h3>Rice paper dumplings</h3>
+      <p>
+        Enjoy these pork and mushroom dumplings as a starter or side as part of
+        a Vietnamese-inspired feast.
+      </p>
+      <p>Serve with our soy & sesame dipping sauce.</p>
+    </div>
+    <div>
+      <h3>Tomato bruschetta</h3>
+      <p>Make our simple tomato bruschetta as a classic Italian starter.</p>
+      <p>
+        Ideal for a summer gathering with friends, this easy dish is fresh,
+        tasty and full of flavour.
+      </p>
+    </div>
+    <h3>Halloumi, carrot & orange salad</h3>
+      <p>Halloumi, carrot, orange and watercress salad with a mustard and honey dressing.</p>
+    <hr />
     <footer>
       <h2><u>Contact</u></h2>
       <p>Delta Towers, Westlands, Waiyaki Way,Nairobi</p>
