contact page completed

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Maina's Kitchen</title>
   </head>
   <body>
+    <div>
     <h1><u>Contact</u></h1>
     <hr />
     <a href="index.html">Home Page</a>
@@ -15,8 +16,63 @@
     <a href="about.html">About</a>
     <br />
     <hr />
+    </div>
+    
+    <!-- Contact form -->
+    <div>
+      <h2><u>Reservation Form</u></h2>
+      <form action="">
+        <label for="name">Name:</label>
+        <input type="text" name="name" /><br /><br />
+        <label for="number">Number:</label>
+        <input type="number" name="number" /><br /><br />
+        <label for="email">Email:</label>
+        <input type="email" name="email" /><br /><br />
+        <label for="reservation_date">Reservation date:</label>
+        <input type="date" name="date" /><br /><br />
+        <label for="number_of_guests">Number of Guests:</label>
+        <input type="number" name="number_of_guests" /><br /><br />
+        <input type="submit" value="Submit" />
+      </form>
+    </div>
+    <hr />
+    <!-- Contact details -->
+    <div>
+      <h2><u>Contact Details</u></h2>
+      <p>
+        We are located in <b>Delta Towers, Westlands, Waiyaki Way,Nairobi</b>
+      </p>
+      <p>
+        Our email address for any concerns and suggestions is
+        <a href="mailto:Maina'skitchen@email.com">Maina'skitchen@email.com</a>
+      </p>
+      <p>You can reach us on <b>Tel: 0700 000 000</b></p>
+      <p>Our operating hours are as follows:</p>
+      <p><b>Monday-Friday:</b> 10am-10pm</p>
+      <p><b>Saturday:</b> 10am-11:30pm</p>
+      <p><b>Sunday:</b> 11am-9pm</p>
+      <p><b>Our social media links are:</b></p>
+      <p><a href="facebook.com">FB</a></p>
+      <p><a href="x.com">X</a></p>
+      <p><a href="instagram.com">IG</a></p>
+    </div>
 
+    <!-- Map  -->
+    <div>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.8451542409857!2d36.799403474965544!3d-1.2655035987224537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f17403cbaee4b%3A0x74fe36a144a9109a!2sDelta%20Corner%20Towers!5e0!3m2!1sen!2ske!4v1751822340967!5m2!1sen!2ske"
+        width="600"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </div>
+    <hr />
+    <!--Contact footer  -->
     <footer>
+        <div>
       <h2><u>Contact</u></h2>
       <p>Delta Towers, Westlands, Waiyaki Way,Nairobi</p>
       <p>
@@ -29,6 +85,7 @@
       <p><a href="facebook.com">FB</a></p>
       <p><a href="x.com">X</a></p>
       <p><a href="instagram.com">IG</a></p>
+      </div>
     </footer>
   </body>
 </html>
