--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Maina's Kitchen</title>
   </head>
   <body>
+    <div>
     <h1><u>Maina's Kitchen</u></h1>
     <hr />
     <a href="menu_page.html">Menu</a>
@@ -16,7 +17,11 @@
     <br />
     <img src="restaurant.jpg" alt="Restaurant picture" />
     <br />
+    </div>
+
+    <!-- Welcome message  -->
     <div>
+        <h2><u>Welcome message</u></h2>
       Welcome to Maina's Kitchen. Food isn't a meal, it's an experience. We
       cater to different palates ranging from sea food to vegeterian food. We
       work hard to source premium ingredients and we cook everything from
@@ -24,6 +29,7 @@
       time you tasted our dishes.
     </div>
     <hr />
+    <div>
     <img src="Mushroom-curry.webp" alt="Mushroom-curry" />
     <br />
     <img src="steak.webp" alt="Steak" width="490" height="490" />
@@ -33,7 +39,10 @@
       width="475"
       height="380"
     />
+    </div>
     <hr />
+
+    <!-- Contact details -->
     <footer>
       <h2><u>Contact</u></h2>
       <p>Delta Towers, Westlands, Waiyaki Way,Nairobi</p>
