--- a/menu_page.html
+++ b/menu_page.html
@@ -13,6 +13,8 @@
     <br />
     <a href="contact.html">Contacts Page</a>
     <hr />
+
+    <!-- Menu items -->
     <h2><u>Starters</u></h2>
     <div>
       <h3>Rice paper dumplings</h3>
@@ -30,9 +32,13 @@
         tasty and full of flavour.
       </p>
     </div>
+    <div>
     <h3>Halloumi, carrot & orange salad</h3>
       <p>Halloumi, carrot, orange and watercress salad with a mustard and honey dressing.</p>
+      </div>
     <hr />
+
+    <!--Contact details  -->
     <footer>
       <h2><u>Contact</u></h2>
       <p>Delta Towers, Westlands, Waiyaki Way,Nairobi</p>
