--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
 
     <a href="contact.html">Contacts Page</a>
     <hr />
+    <!-- History, mission and team -->
+     <div>
     <h2><u>Our History</u></h2>
     <p>Our restaurant was established in 2015.</p>
     <p>
@@ -25,6 +27,9 @@
       We wanted to make people curious about different cusuines from different
       parts of the world.
     </p>
+    </div>
+
+    <div>
     <h2><u>Our Mission</u></h2>
 
     <p>
@@ -32,7 +37,9 @@
       parts of the world.
     </p>
     <p>We want people to experience and enjoy a meal.</p>
+    </div>
 
+    <div>
     <h2><u>Team</u></h2>
     <p>
       We have a team of 7 chefs trained in various cuisines from across the
@@ -47,7 +54,10 @@
       Our support staff has been trained to make your dining experience as
       wonderful and seemless as possible.
     </p>
+    </div>
     <hr />
+
+    <!-- Contact details -->
     <footer>
       <h2><u>Contact</u></h2>
       <p>Delta Towers, Westlands, Waiyaki Way,Nairobi</p>
