food menu complteted

--- a/menu_page.html
+++ b/menu_page.html
@@ -6,7 +6,7 @@
     <title>Maina's Kitchen</title>
   </head>
   <body>
-    <h1><u>Menu</u></h1>
+    <h1><u>MENU</u></h1>
     <hr />
     <a href="index.html">Home Page</a><br />
     <a href="about.html">About</a>
@@ -17,41 +17,119 @@
     <!-- Menu items -->
     <h2><u>Starters</u></h2>
     <div>
-      <h3>Rice paper dumplings</h3>
+      <pre><h3>Rice paper dumplings          Ksh 800</h3></pre>
       <p>
         Enjoy these pork and mushroom dumplings as a starter or side as part of
         a Vietnamese-inspired feast.
       </p>
       <p>Serve with our soy & sesame dipping sauce.</p>
     </div>
+    <br />
+
     <div>
-      <h3>Tomato bruschetta</h3>
+      <pre><h3>Tomato bruschetta            Ksh 750</h3></pre>
       <p>Make our simple tomato bruschetta as a classic Italian starter.</p>
       <p>
         Ideal for a summer gathering with friends, this easy dish is fresh,
         tasty and full of flavour.
       </p>
     </div>
+    <br />
     <div>
-    <h3>Halloumi, carrot & orange salad</h3>
-      <p>Halloumi, carrot, orange and watercress salad with a mustard and honey dressing.</p>
-      </div>
+      <pre><h3>Halloumi, carrot & orange salad        Ksh 600</h3></pre>
+      <p>
+        Halloumi, carrot, orange and watercress salad with a mustard and honey
+        dressing.
+      </p>
+    </div>
+    <br /><br />
+
+    <h2><u>Main Course</u></h2>
+    <div>
+      <pre><h3>Grilled Pesto Chicken          Ksh 1780</h3></pre>
+      <p>
+        This grilled pesto chicken uses fresh homemade pesto 3 ways: as a
+        marinade, as a sauce brushed over the finished chicken, and as a dipping
+        sauce. This juicy, bright chicken feels summery and fresh.
+      </p>
+    </div>
+    <br />
+    <div>
+      <pre><h3>Spaghetti Bolognese            Ksh 1500</h3></pre>
+      <p>
+        Pasta dish consisting of spaghetti noodles topped with a rich, meaty
+        tomato-based sauce.
+      </p>
+    </div>
+    <br />
+    <div>
+      <pre><h3>Filet Mignon with Bacon Cream Sauce          Ksh 2200</h3></pre>
+      <p>A bacon cream sauce accompanies amazing, filet mignon.</p>
+    </div>
+    <br /><br />
+
+    <h2><u>Desserts</u></h2>
+    <div>
+      <pre><h3>Apple Crumble with Ice Cream            Ksh 450</h3></pre>
+      <p>
+        Warm spiced cooked apples and top crispy served with 2 scoops of ice
+        cream of your choice.
+      </p>
+    </div>
+    <br />
+    <div>
+      <pre><h3>Cheesecake          Ksh 800</h3></pre>
+      <p>
+        A creamy cheesecake, often offered in classic New York style or with
+        various toppings.
+      </p>
+    </div>
+    <br />
+    <div>
+      <pre><h3>Crème Brûlée           Ksh 600</h3></pre>
+      <p>
+        A classic French dessert with a rich custard base and a brittle
+        caramelized sugar topping.
+      </p>
+    </div>
+    <br /><br />
+
+    <h2><u>Beverages</u></h2>
+    <div>
+      <pre><h3>Beer           Ksh400</h3></pre>
+      <p>Locally brewed beer made from a local IPA.</p>
+    </div>
+    <br />
+    <div>
+      <pre><h3>Cappuccino          Ksh 300</h3></pre>
+      <p>
+        A delightful coffee drink made with a shot of espresso, steamed milk,
+        and a layer of foamed milk topped with a dusting of cocoa or cinnamon.
+      </p>
+    </div><br>
+    <div>
+        <pre><h3>Kombucha           Ksh500</h3></pre>
+        <p>A fermented, lightly effervescent, sweetened tea drink.</p>
+    </div><br>
+
     <hr />
 
     <!--Contact details  -->
     <footer>
-      <h2><u>Contact</u></h2>
-      <p>Delta Towers, Westlands, Waiyaki Way,Nairobi</p>
+        <div>
+      <h2><u>CONTACT</u></h2>
+      <p><b>Delta Towers, Westlands, Waiyaki Way,Nairobi</p></b>
       <p>
-        <a href="mailto:Maina'skitchen@email.com">Maina'skitchen@email.com</a>
+        <a href="mailto:maina'skitchen@email.com">Maina'skitchen@email.com</a>
       </p>
-      <p>Tel: 0700 000 000</p>
-      <p>Monday-Friday: 10am-10pm</p>
-      <p>Saturday: 10am-11:30pm</p>
-      <p>Sunday: 11am-9pm</p>
-      <p><a href="facebook.com">FB</a></p>
+      <p><b>Tel:</b> 0700 000 000</p>
+      <p><b>Monday-Friday:</b> 10am-10pm</p>
+      <p><b>Saturday:</b> 10am-11:30pm</p>
+      <p><b>Sunday:</b> 11am-9pm</p>
+      <p><a href="facebook.com">Facebook</a></p>
       <p><a href="x.com">X</a></p>
-      <p><a href="instagram.com">IG</a></p>
+      <p><a href="instagram.com">Instagram</a></p>
+      </div>
     </footer>
   </body>
 </html>
