--- a/about.html
+++ b/about.html
@@ -59,18 +59,20 @@
 
     <!-- Contact details -->
     <footer>
-      <h2><u>Contact</u></h2>
-      <p>Delta Towers, Westlands, Waiyaki Way,Nairobi</p>
+        <div>
+      <h2><u>CONTACT</u></h2>
+      <p><b>Delta Towers, Westlands, Waiyaki Way,Nairobi</p></b>
       <p>
-        <a href="mailto:Maina'skitchen@email.com">Maina'skitchen@email.com</a>
+        <a href="mailto:maina'skitchen@email.com">Maina'skitchen@email.com</a>
       </p>
-      <p>Tel: 0700 000 000</p>
-      <p>Monday-Friday: 10am-10pm</p>
-      <p>Saturday: 10am-11:30pm</p>
-      <p>Sunday: 11am-9pm</p>
-      <p><a href="facebook.com">FB</a></p>
+      <p><b>Tel:</b> 0700 000 000</p>
+      <p><b>Monday-Friday:</b> 10am-10pm</p>
+      <p><b>Saturday:</b> 10am-11:30pm</p>
+      <p><b>Sunday:</b> 11am-9pm</p>
+      <p><a href="facebook.com">Facebook</a></p>
       <p><a href="x.com">X</a></p>
-      <p><a href="instagram.com">IG</a></p>
+      <p><a href="instagram.com">Instagram</a></p>
+      </div>
     </footer>
   </body>
 </html>
