README.md updated

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>Maina's Kitchen</title>
   </head>
   <body>
-    <h1><u>About Us</u></h1>
+    <h1><u>ABOUT US</u></h1>
     <hr />
     <a href="index.html">Home Page</a>
     <br />
@@ -27,7 +27,7 @@
       We wanted to make people curious about different cusuines from different
       parts of the world.
     </p>
-    </div>
+    </div><br>
 
     <div>
     <h2><u>Our Mission</u></h2>
@@ -37,7 +37,7 @@
       parts of the world.
     </p>
     <p>We want people to experience and enjoy a meal.</p>
-    </div>
+    </div><br>
 
     <div>
     <h2><u>Team</u></h2>
@@ -60,10 +60,10 @@
     <!-- Contact details -->
     <footer>
         <div>
-      <h2><u>CONTACT</u></h2>
+      <h2><u>CONTACTS</u></h2>
       <p><b>Delta Towers, Westlands, Waiyaki Way,Nairobi</p></b>
       <p>
-        <a href="mailto:maina'skitchen@email.com">Maina'skitchen@email.com</a>
+        <a href="mailto:maina'skitchen@email.com">maina'skitchen@email.com</a>
       </p>
       <p><b>Tel:</b> 0700 000 000</p>
       <p><b>Monday-Friday:</b> 10am-10pm</p>
