--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Welcome message  -->
     <div>
-        <h2><u>Welcome message</u></h2>
+        <h2><u>WELCOME</u></h2>
       Welcome to Maina's Kitchen. Food isn't a meal, it's an experience. We
       cater to different palates ranging from sea food to vegeterian food. We
       work hard to source premium ingredients and we cook everything from
@@ -45,10 +45,10 @@
     <!-- Contact details -->
     <footer>
         <div>
-      <h2><u>CONTACT</u></h2>
+      <h2><u>CONTACTS</u></h2>
       <p><b>Delta Towers, Westlands, Waiyaki Way,Nairobi</p></b>
       <p>
-        <a href="mailto:maina'skitchen@email.com">Maina'skitchen@email.com</a>
+        <a href="mailto:maina'skitchen@email.com">maina'skitchen@email.com</a>
       </p>
       <p><b>Tel:</b> 0700 000 000</p>
       <p><b>Monday-Friday:</b> 10am-10pm</p>
