--- a/menu_page.html
+++ b/menu_page.html
@@ -117,10 +117,10 @@
     <!--Contact details  -->
     <footer>
         <div>
-      <h2><u>CONTACT</u></h2>
+      <h2><u>CONTACTS</u></h2>
       <p><b>Delta Towers, Westlands, Waiyaki Way,Nairobi</p></b>
       <p>
-        <a href="mailto:maina'skitchen@email.com">Maina'skitchen@email.com</a>
+        <a href="mailto:maina'skitchen@email.com">maina'skitchen@email.com</a>
       </p>
       <p><b>Tel:</b> 0700 000 000</p>
       <p><b>Monday-Friday:</b> 10am-10pm</p>
