--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div>
-    <h1><u>Contact</u></h1>
+    <h1><u>CONTACTS</u></h1>
     <hr />
     <a href="index.html">Home Page</a>
     <br />
@@ -44,7 +44,7 @@
       </p>
       <p>
         Our email address for any concerns and suggestions is
-        <a href="mailto:Maina'skitchen@email.com">Maina'skitchen@email.com</a>
+        <a href="mailto:maina'skitchen@email.com">maina'skitchen@email.com</a>
       </p>
       <p>You can reach us on <b>Tel: 0700 000 000</b></p>
       <p>Our operating hours are as follows:</p>
@@ -52,13 +52,14 @@
       <p><b>Saturday:</b> 10am-11:30pm</p>
       <p><b>Sunday:</b> 11am-9pm</p>
       <p><b>Our social media links are:</b></p>
-      <p><a href="facebook.com">FB</a></p>
+      <p><a href="facebook.com">Facebook</a></p>
       <p><a href="x.com">X</a></p>
-      <p><a href="instagram.com">IG</a></p>
-    </div>
+      <p><a href="instagram.com">Instagram</a></p>
+    </div><br><br>
 
     <!-- Map  -->
     <div>
+        <p>Our restaurant is located on the map below: </p>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.8451542409857!2d36.799403474965544!3d-1.2655035987224537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f17403cbaee4b%3A0x74fe36a144a9109a!2sDelta%20Corner%20Towers!5e0!3m2!1sen!2ske!4v1751822340967!5m2!1sen!2ske"
         width="600"
@@ -73,10 +74,10 @@
     <!--Contact footer  -->
     <footer>
         <div>
-      <h2><u>CONTACT</u></h2>
+      <h2><u>CONTACTS</u></h2>
       <p><b>Delta Towers, Westlands, Waiyaki Way,Nairobi</p></b>
       <p>
-        <a href="mailto:maina'skitchen@email.com">Maina'skitchen@email.com</a>
+        <a href="mailto:maina'skitchen@email.com">maina'skitchen@email.com</a>
       </p>
       <p><b>Tel:</b> 0700 000 000</p>
       <p><b>Monday-Friday:</b> 10am-10pm</p>
