Home page header change

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div>
-    <h1><u>Maina's Kitchen</u></h1>
+    <h1><u>MAINA'S KITCHEN</u></h1>
     <hr />
     <a href="menu_page.html">Menu</a>
     <br />
