CSS page and elements added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maina's Kitchen</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div>
@@ -22,11 +23,11 @@
     <!-- Welcome message  -->
     <div>
         <h2><u>WELCOME</u></h2>
-      Welcome to Maina's Kitchen. Food isn't a meal, it's an experience. We
+      <p>Welcome to Maina's Kitchen. Food isn't a meal, it's an experience. We
       cater to different palates ranging from sea food to vegeterian food. We
       work hard to source premium ingredients and we cook everything from
       scratch with love. We are here to make your food as memorable as the first
-      time you tasted our dishes.
+      time you tasted our dishes.</p>
     </div>
     <hr />
     <div>
