--- a/menu_page.html
+++ b/menu_page.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maina's Kitchen</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1><u>MENU</u></h1>
+    <div><h1><u>MENU</u></h1>
     <hr />
     <a href="index.html">Home Page</a><br />
     <a href="about.html">About</a>
     <br />
     <a href="contact.html">Contacts Page</a>
+    </div>
     <hr />
 
     <!-- Menu items -->
