--- a/about.html
+++ b/about.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maina's Kitchen</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1><u>ABOUT US</u></h1>
+    <div><h1><u>ABOUT US</u></h1>
     <hr />
     <a href="index.html">Home Page</a>
     <br />
@@ -14,6 +15,7 @@
     <br />
 
     <a href="contact.html">Contacts Page</a>
+    </div>
     <hr />
     <!-- History, mission and team -->
      <div>
